修改js 與 css路徑

--- a/JS-高雄觀光景點API-1.html
+++ b/JS-高雄觀光景點API-1.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="高雄觀光景點API.css">
+    <link rel="stylesheet" href="JS-高雄觀光景點API.css">
 </head>
 <body>
 <div class="content">
@@ -80,5 +80,5 @@
 </div>
     
 </body>
-<script src="高雄觀光景點API-1.js"></script>
+<script src="JS-高雄觀光景點API-1.js"></script>
 </html>
